This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: bytes.maketrans segfaults
Type: crash Stage:
Components: Interpreter Core Versions: Python 3.1, Python 3.2
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: amaury.forgeotdarc, benjamin.peterson, drukker, georg.brandl, pitrou
Priority: release blocker Keywords: patch

Created on 2009-10-05 12:53 by drukker, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
maketrans_segfault.patch drukker, 2009-10-05 12:53
bytes_maketrans_2.patch drukker, 2009-10-05 13:36
Messages (4)
msg93599 - (view) Author: Derk Drukker (drukker) Date: 2009-10-05 12:53
The new maketrans static method in Python 3.1 segfaults when using byte
values > 127.

Reproduce: bytes.maketrans(bytes(range(256)), b'X' * 256)

Cause: _Py_bytes_maketrans in Objects/bytes_methods.c uses signed int as
array index.

Fix attached. Also adds test.
msg93602 - (view) Author: Amaury Forgeot d'Arc (amaury.forgeotdarc) * (Python committer) Date: 2009-10-05 13:23
Good catch!
Shouldn't the "i" variable be a "Py_ssize_t"?
msg93603 - (view) Author: Derk Drukker (drukker) Date: 2009-10-05 13:36
Yes, it should indeed be a Py_ssize_t.

New patch.
msg94006 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-10-14 17:19
Patch committed in r75404 and r75406. Thanks!
History
Date User Action Args
2022-04-11 14:56:53adminsetnosy: + georg.brandl, benjamin.peterson
github: 51314
2009-10-14 17:19:29pitrousetstatus: open -> closed

nosy: + pitrou
messages: + msg94006

resolution: fixed
2009-10-05 18:27:45brett.cannonsetpriority: release blocker
type: crash
2009-10-05 13:36:27drukkersetfiles: + bytes_maketrans_2.patch

messages: + msg93603
2009-10-05 13:23:47amaury.forgeotdarcsetnosy: + amaury.forgeotdarc
messages: + msg93602
2009-10-05 12:53:22drukkercreate