Issue #7065: Fix a crash in bytes.maketrans and bytearray.maketrans when using byte values greater than 127.  Patch by egreen.